--- a/ci/certify.yml
+++ b/ci/certify.yml
@@ -64,7 +64,7 @@ resources:
     type: git
     source:
       uri: https://github.com/aliyun/terraform-provider-alicloud.git
-      branch: master
+      branch: xiaozhu
       paths:
         - alicloud/*
         - examples/*
